Added the ability create POST with csrf protected view, added additional style to HTML form

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,6 +10,10 @@
     <h1>Wellcome to Blog</h1>
 </div>
 
+<ul>
+    <li><a href="{% url 'blog:create_blog' %}">create blog</a></li>
+</ul>
+
 {% endblock content %}
 
 {% block scripts %}
