--- a/static/scss/_forms.scss
+++ b/static/scss/_forms.scss
@@ -7,6 +7,12 @@
     padding: 20px;
 }
 
+.form-control {
+    display: block;
+    width: 100%;
+    
+}
+
 input[type=text],
 input[type=password],
 input[type=email],
